k8s/overlays/dev/patches/images.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohisee-api
spec:
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohisee-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Never
